--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+#Ignore vscode-vim env settings
+.vscode
 #Ignore ctags
 tags
 # Ignore bundler config.
